Update requirements, README and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.7"
 
 services:
-  app:
+  mfe-backend-example-app:
     build: .
-    container_name: app
+    container_name: mfe-backend-example-
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
       - ./:/src/
     ports:
-      - 8002:8000
+      - 8001:8000
